[gd_scene load_steps=12 format=3 uid="uid://bvyrijkk18iiq"]

[ext_resource type="Script" path="res://Main Game/Microgames/GameHotDog/game_grab_stick.gd" id="1_kq6cc"]
[ext_resource type="Texture2D" uid="uid://cc2q3wlpnktnj" path="res://filedf3d.svg" id="2_vj5kf"]
[ext_resource type="Texture2D" uid="uid://dinrjagr3thwi" path="res://icon.svg" id="3_q7i8a"]
[ext_resource type="Script" path="res://Main Game/Microgames/GameHotDog/target_1.gd" id="4_bw4qv"]
[ext_resource type="Script" path="res://Main Game/Microgames/GameHotDog/target_2.gd" id="5_raimr"]
[ext_resource type="AudioStream" uid="uid://xeechu6dhxx5" path="res://Main Game/Microgames/GameHotDog/Clock Tick.ogg" id="6_0a8a6"]
[ext_resource type="AudioStream" uid="uid://das6oobng6oby" path="res://Main Game/Microgames/GameHotDog/Hot Dog Microgame.wav" id="6_1r5kp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qsfbx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q7i8a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n61f0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0jbxk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q7i8a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r10md"]

[node name="GameGrabStick" type="Node" node_paths=PackedStringArray("transition_rect", "target_1", "target_2", "target_1_collision", "target_2_collision", "catcher_1_collision", "catcher_2_collision", "target_timer_1", "target_timer_2", "game_timer", "tick_timer_1", "tick_timer_2", "tick_timer_3", "early_finish_timer_1", "early_finish_timer_2", "game_music", "tick")]
script = ExtResource("1_kq6cc")
transition_rect = NodePath("CanvasLayer/Control/TransitionRect")
target_1 = NodePath("Target1")
target_2 = NodePath("Target2")
target_1_collision = NodePath("Target1/CollisionShape2D")
target_2_collision = NodePath("Target2/CollisionShape2D")
catcher_1_collision = NodePath("Catcher1/CollisionShape2D")
catcher_2_collision = NodePath("Catcher2/CollisionShape2D")
target_timer_1 = NodePath("TargetTimer1")
target_timer_2 = NodePath("TargetTimer2")
game_timer = NodePath("GameTimer")
tick_timer_1 = NodePath("TickTimer1")
tick_timer_2 = NodePath("TickTimer2")
tick_timer_3 = NodePath("TickTimer3")
early_finish_timer_1 = NodePath("EarlyFinish1")
early_finish_timer_2 = NodePath("EarlyFinish2")
game_music = NodePath("GameMusic")
tick = NodePath("TickSFX")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TransitionRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
texture = ExtResource("2_vj5kf")

[node name="Catcher1" type="Area2D" parent="."]
position = Vector2(640, 720)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Catcher1"]
modulate = Color(1, 0.341176, 0.341176, 1)
sprite_frames = SubResource("SpriteFrames_qsfbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Catcher1"]
scale = Vector2(6, 12)
shape = SubResource("RectangleShape2D_n61f0")

[node name="Catcher2" type="Area2D" parent="."]
position = Vector2(1280, 720)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Catcher2"]
modulate = Color(1, 0.341176, 0.341176, 1)
sprite_frames = SubResource("SpriteFrames_qsfbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Catcher2"]
scale = Vector2(6, 12)
shape = SubResource("RectangleShape2D_n61f0")

[node name="Target1" type="Area2D" parent="."]
position = Vector2(640, 135)
script = ExtResource("4_bw4qv")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Target1"]
sprite_frames = SubResource("SpriteFrames_0jbxk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Target1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target1"]
scale = Vector2(6, 15)
shape = SubResource("RectangleShape2D_r10md")

[node name="Target2" type="Area2D" parent="."]
position = Vector2(1280, 135)
script = ExtResource("5_raimr")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Target2"]
sprite_frames = SubResource("SpriteFrames_0jbxk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Target2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target2"]
scale = Vector2(6, 15)
shape = SubResource("RectangleShape2D_r10md")

[node name="TargetTimer1" type="Timer" parent="."]
one_shot = true

[node name="TargetTimer2" type="Timer" parent="."]
one_shot = true

[node name="TickTimer3" type="Timer" parent="."]
one_shot = true

[node name="TickTimer2" type="Timer" parent="."]
one_shot = true

[node name="TickTimer1" type="Timer" parent="."]
one_shot = true

[node name="EarlyFinish1" type="Timer" parent="."]
one_shot = true

[node name="EarlyFinish2" type="Timer" parent="."]
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="TickSFX" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("6_0a8a6")
volume_db = 8.0

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("6_1r5kp")

[connection signal="area_entered" from="Catcher1" to="." method="_on_catcher_1_area_entered"]
[connection signal="area_exited" from="Catcher1" to="." method="_on_catcher_1_area_exited"]
[connection signal="area_entered" from="Catcher2" to="." method="_on_catcher_2_area_entered"]
[connection signal="area_exited" from="Catcher2" to="." method="_on_catcher_2_area_exited"]
[connection signal="child_exiting_tree" from="Target1/VisibleOnScreenNotifier2D" to="Target1" method="_on_visible_on_screen_notifier_2d_child_exiting_tree"]
[connection signal="child_exiting_tree" from="Target2/VisibleOnScreenNotifier2D" to="Target2" method="_on_visible_on_screen_notifier_2d_child_exiting_tree"]
[connection signal="timeout" from="TargetTimer1" to="Target1" method="_on_target_timer_1_timeout"]
[connection signal="timeout" from="TargetTimer2" to="Target2" method="_on_target_timer_2_timeout"]
[connection signal="timeout" from="TickTimer3" to="." method="_on_tick_timer_3_timeout"]
[connection signal="timeout" from="TickTimer2" to="." method="_on_tick_timer_2_timeout"]
[connection signal="timeout" from="TickTimer1" to="." method="_on_tick_timer_1_timeout"]
[connection signal="timeout" from="EarlyFinish1" to="." method="_on_early_finish_timeout"]
[connection signal="timeout" from="EarlyFinish2" to="." method="_on_early_finish_2_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
